plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.0'
	id 'io.spring.dependency-management' version '1.1.5'
	id "org.sonarqube" version "4.4.1.3373"
	id 'jacoco'
}

group = 'com.quran'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

tasks.withType(JavaCompile).each {
	it.options.compilerArgs.add('--enable-preview')
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-webflux'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	implementation 'org.zalando:logbook-logstash:3.9.0'
	implementation 'org.zalando:logbook-netty:3.9.0'
	implementation 'org.zalando:logbook-spring-webflux:3.9.0'
	implementation 'io.micrometer:micrometer-tracing-bridge-brave:1.2.5'
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'io.projectreactor:reactor-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

sonar {
	properties {
		property "sonar.projectKey", "HassanAliCS1_tester"
		property "sonar.organization", "hassanalics1"
		property "sonar.host.url", "https://sonarcloud.io"
		property "sonar.coverage.jacoco.xmlReportPaths","build/reports/jacoco/test/jacocoTestReport.xml"
	}
}

jacoco {
	toolVersion = "0.8.11"
}

jacocoTestReport {
	dependsOn test // tests are required to run before generating the report


	reports {
		xml.required = true
	}
}

test {
	useJUnitPlatform()
	jvmArgs(['--enable-preview'])
	finalizedBy jacocoTestReport
}
